--- a/webots/ide.css
+++ b/webots/ide.css
@@ -39,12 +39,6 @@
     overflow: hidden;
   }
 
-  .dark-theme {
-    background: rgb(0,0,0);
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(35,35,35,1) 30%, rgba(35,35,35,1) 100%);
-    color: white;
-  }
-
   h2 span {
     padding-right: 10px;
   }
@@ -84,11 +78,11 @@
   }
 
   #blockly {
-    color: black;
+    /*color: black;*/
   }
 
   .blocklySvg {
-    background-color: #444 !important;
+    /* background-color: #444 !important; */
   }
 
   .blocklyWidgetDiv {
@@ -106,6 +100,10 @@
 
   .blocklyFlyoutBackground {
 
+  }
+
+  #output-panel {
+    background-color: white;
   }
 
   #output-panel pre {
